--- a/index.html
+++ b/index.html
@@ -43,26 +43,27 @@
                 <img src="FOTOS-2 (1).jpg" class="d-block w-100 h-2" alt="...">
             </div>
         </div>
-        <div class="espacamento">
-            <section class="">
+        <div class="espacamento container-fluid style=" background-color: #eb650b ;">
+            <section class="container-fluid">
                 AULAS REGULARES:
             </section>
         </div>
         <div class="espacamento container-fluid">
             LOCALIDADE
-            <section class="section-localidade ">
+            <section class="section-localidade container-fluid ">
                 <div class="row">
-                    <div class="col">
-                        <div class="justify-content-center">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.539977242458!2d-46.514710699999995!3d-18.594767100000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ae8acb1bd1e351%3A0x92b38d51d8cd719d!2sEstudio%20De%20Dan%C3%A7a%20Marcela%20Martins!5e0!3m2!1spt-BR!2sbr!4v1756052817217!5m2!1spt-BR!2sbr"
-                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        </div>
+                    <div class="col justify-content-start">
+
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.539977242458!2d-46.514710699999995!3d-18.594767100000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ae8acb1bd1e351%3A0x92b38d51d8cd719d!2sEstudio%20De%20Dan%C3%A7a%20Marcela%20Martins!5e0!3m2!1spt-BR!2sbr!4v1756052817217!5m2!1spt-BR!2sbr"
+                            width="100%" height="460" style="border:0; margin:0 0!important;" allowfullscreen=""
+                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                     </div>
-                    <div class="col">
-                        <img src="fotonadahaver.jfif" alt="" style="object-fit: cover:  !important;;">
+                    <div class="col m-0 p-0">
+                        <img src="FOTOS-5 (1).jpg" alt="">
                     </div>
+
                 </div>
 
         </div>
