--- a/NAV&MENU/menuNAV.html
+++ b/NAV&MENU/menuNAV.html
@@ -1,20 +1,18 @@
-<!doctype html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GIRO DNC</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/NAV&MENU/nav&menu.css">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
-  <link rel="stylesheet" href="/Financeiro/CSS/mensalidades.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <script src="/Financeiro/JS/mensalidade.js" defer></script>
 </head>
-
 <body>
-  <header class="gd-topbar">
+    <header class="gd-topbar">
     <div style="position:fixed;top:0;left:20px;z-index:2000;width:80px;height:76px;display:flex;align-items:center;">
       <a href="../index.html">
         <img src="/Financeiro/IMG/Girologo.jpg" alt="Logo Giro" style="width:80px;height:76px;object-fit:contain;">
@@ -99,7 +97,7 @@
                   <i class="bi bi-chevron-down ms-auto"></i>
                 </button>
                 <div class="collapse" id="collapseComunicacao" data-bs-parent="#sidebarAccordion">
-                  <a href="/NAV&MENU/menuNAV.html" class="nav-link sidebar-option"><span>Converse conosco</span></a>
+                  <a href="#" class="nav-link sidebar-option"><span>Converse conosco</span></a>
                   <a href="#" class="nav-link sidebar-option"><span>Chat</span></a>
                 </div>
               </div>
@@ -108,60 +106,6 @@
         </div>
       </nav>
     </aside>
-
-    <main class="gd-main flex-grow-1">
-  <div class="container conteudo py-4">
-   
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb bg-transparent p-0 mb-2">
-        <li class="breadcrumb-item active fw-semi" aria-current="page">Financeiro</li>
-        <li class="breadcrumb-item active fw-semi" aria-current="page">Mensalidades</li>
-      </ol>
-    </nav>
-
-    
-    <h1 class="titulo-principal mb-4">Mensalidades</h1>
-
-  
-    <div class="card border-0 shadow-sm card-pagamento">
-      <div class="card-body">
-        <div class="d-flex justify-content-between align-items-center mb-3">
-          <h5 class="titulo-detalhes mb-0">Detalhes do Pagamento</h5>
-        </div>
-
-        <div class="row mb-4">
-          <div class="col-md-6">
-            <ul class="list-unstyled mb-0">
-              <li><strong>Modalidade:</strong> Vogue</li>
-              <li><strong>Mês:</strong> XX/XX/XX</li>
-              <li><strong>Referência:</strong> Mensalidade</li>
-            </ul>
-          </div>
-          <div class="col-md-6 text-md-end">
-            <p class="mb-1 fs-5 fw-bold text-dark">R$ 300,00</p>
-            <p class="text-muted mb-0">Vencimento: XX/XX/XXXX</p>
-          </div>
-        </div>
-
-        <div class="alert alert-warning d-flex align-items-center gap-2 py-2 px-3 mb-3" role="alert">
-          <img src="/Financeiro/IMG/i.png" alt="i" style="width:18px;height:18px;">
-          Antes de realizar o pagamento, certifique-se de que o nome presente no boleto pertença à Giro DNC.
-        </div>
-
-        <div class="d-flex flex-wrap gap-3 mt-3">
-          <button class="btn btn-pagar shadow-sm px-4 py-2">Realizar pagamento</button>
-          <button class="btn btn-boleto shadow-sm px-4 py-2">
-            <i class="bi bi-printer me-1"></i> Imprimir boleto
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
-
-
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
