--- a/Financeiro/HTML/Extrato.html
+++ b/Financeiro/HTML/Extrato.html
@@ -109,7 +109,13 @@
 
     <main class="gd-main flex-grow-1">
       <div class="container conteudo">
-        <div class="gd-breadcrumb mb-1 text-muted">Financeiro / Extrato Financeiro</div>
+       <nav aria-label="breadcrumb">
+      <ol class="breadcrumb bg-transparent p-0 mb-2">
+        <li class="breadcrumb-item active fw-semi" aria-current="page">Financeiro</li>
+        <li class="breadcrumb-item active fw-semi" aria-current="page">Mensalidades</li>
+      </ol>
+    </nav>
+
         <h1 class="titulo-principal">Extrato Financeiro</h1>
 
         <div class="card card-extrato">
