--- a/Financeiro/HTML/mensalidades.html
+++ b/Financeiro/HTML/mensalidades.html
@@ -100,7 +100,7 @@
                 </button>
                 <div class="collapse" id="collapseComunicacao" data-bs-parent="#sidebarAccordion">
                   <a href="/NAV&MENU/menuNAV.html" class="nav-link sidebar-option"><span>Converse conosco</span></a>
-                  <a href="#" class="nav-link sidebar-option"><span>Chat</span></a>
+                  <a href="/loginFront/index.html" class="nav-link sidebar-option"><span>Chat</span></a>
                 </div>
               </div>
             </li>
