--- a/Financeiro/HTML/mensalidades.html
+++ b/Financeiro/HTML/mensalidades.html
@@ -40,12 +40,22 @@
               <div class="gd-submenu mb-1">
                 <button class="btn-toggle sidebar-option" data-bs-toggle="collapse" data-bs-target="#collapseAluno">
                   <i class="bi bi-person-circle"></i>
-                  <span>Painel do Aluno</span>
+                  <span>Painel do aluno</span>
                   <i class="bi bi-chevron-down ms-auto"></i>
                 </button>
                 <div class="collapse" id="collapseAluno" data-bs-parent="#sidebarAccordion">
-                  <a href="#" class="nav-link sidebar-option"><span>Visão Geral</span></a>
-                  <a href="#" class="nav-link sidebar-option"><span>Horários de Aula</span></a>
+                  <a href="../../painel_aluno/index.html" class="nav-link sidebar-option">
+                    <i class="bi bi-speedometer2"></i>
+                    <span>Visão Geral</span>
+                  </a>
+                  <a href="../../painel_aluno/horarios_aula.html" class="nav-link sidebar-option">
+                    <i class="bi bi-clock"></i>
+                    <span>Horários de aula</span>
+                  </a>
+                  <a href="../../painel_aluno/avisos.html" class="nav-link sidebar-option">
+                    <i class="bi bi-bell"></i>
+                    <span>Avisos</span>
+                  </a>
                 </div>
               </div>
             </li>
@@ -82,11 +92,11 @@
               <div class="gd-submenu mb-2">
                 <button class="btn-toggle sidebar-option" data-bs-toggle="collapse" data-bs-target="#collapseAulas">
                   <i class="bi bi-journal-bookmark"></i>
-                  <span>Minhas Aulas</span>
+                  <span>Minhas aulas</span>
                   <i class="bi bi-chevron-down ms-auto"></i>
                 </button>
                 <div class="collapse" id="collapseAulas" data-bs-parent="#sidebarAccordion">
-                  <a href="#" class="nav-link sidebar-option"><span>Minhas Aulas</span></a>
+                  <a href="../../painel_aluno/minhas_aulas.html" class="nav-link sidebar-option"><span>Minhas aulas</span></a>
                 </div>
               </div>
             </li>
@@ -99,8 +109,8 @@
                   <i class="bi bi-chevron-down ms-auto"></i>
                 </button>
                 <div class="collapse" id="collapseComunicacao" data-bs-parent="#sidebarAccordion">
-                  <a href="/NAV&MENU/menuNAV.html" class="nav-link sidebar-option"><span>Converse conosco</span></a>
-                  <a href="/loginFront/index.html" class="nav-link sidebar-option"><span>Chat</span></a>
+                  <a href="../../painel_aluno/comunicacao.html" class="nav-link sidebar-option"><span>Converse conosco</span></a>
+                  <a href="../../painel_aluno/chat.html" class="nav-link sidebar-option"><span>Chat</span></a>
                 </div>
               </div>
             </li>
