--- a/GIROHOME/index.html
+++ b/GIROHOME/index.html
@@ -31,6 +31,9 @@
             <li class="nav-item mx-5">
               <a class="nav-link" href="contact.html">Contato</a>
             </li>
+            <li class="nav-item mx-5">
+              <a class="nav-link" href="../painel_aluno/index.html">Painel do Aluno</a>
+            </li>
           </ul>
           <button class="btn btn-success btn-lg" href="login.html">Login</button>
         </div>
