editei o login e demais

--- a/GIROHOME/index.html
+++ b/GIROHOME/index.html
@@ -106,6 +106,7 @@
             </li>
         </ul>
     </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.6899802543267!2d-46.50650239999999!3d-18.5880105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ae8ac57fa930dd%3A0x8ca5853bdc199f4e!2sR.%20Alc%C3%ADdes%20Pereira%20da%20Silveira%2C%20143%20-%20Jardim%20Centro%2C%20Patos%20de%20Minas%20-%20MG%2C%2038703-014!5e0!3m2!1spt-BR!2sbr!4v1760047667201!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
 
