--- a/NAV&MENU/menuNAV.html
+++ b/NAV&MENU/menuNAV.html
@@ -43,7 +43,7 @@
                   <i class="bi bi-chevron-down ms-auto"></i>
                 </button>
                 <div class="collapse" id="collapseAluno" data-bs-parent="#sidebarAccordion">
-                  <a href="{% url 'painel_aluno' %}" class="nav-link sidebar-option"><span>Visão Geral</span></a>
+                  <a href="{% url 'painel_aluno_app:painel_aluno' %}" class="nav-link sidebar-option"><span>Visão Geral</span></a>
                   <a href="{% url 'paginas:painel_horarios' %}" class="nav-link sidebar-option"><span>Horários de Aula</span></a>
                 </div>
               </div>
