--- a/GIROHOME/index.html
+++ b/GIROHOME/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark navback">
@@ -32,45 +31,46 @@
             <li class="nav-item mx-5">
               <a class="nav-link" href="#b">Contato</a>
             </li>
-            <li class="nav-item mx-5">
-              <a class="nav-link" href="../painel_aluno/index.html">Painel do Aluno</a>
-            </li>
           </ul>
-          <button class="btn btn-success btn-lg"> <a href="login.html">Login</a></button>
+          <button class="btn btn-success btn-lg"> <a href="../loginFront/index.html">Login</a></button>
         </div>
       </div>
     </nav>
     <div class="girocrew">
-      <div class="girocrew-text">
+      <div class="girocrew-text-container">
+      <div class="girocrew-text" data-aos="fade-left" data-aos-duration="1000">
         <h2>SOLICITE SEU ORÇAMENTO AGORA!</h2>
         <span>Sem compromisso e com total<br>transparência!</span>
-        <button class="btn btn-primary btn-lg mt-3" href="#">Saiba mais</button>
+        <button class="btn btn-primary btn-lg mt-3" href="#" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100">Saiba mais</button>
+        </div>
       </div>
     </div>
     <div class="flashcards text-center">
+      <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
         <h2>Dança presencial para todos os níveis</h2>
-        <span>Aprenda e se divirta com nossos professores em aulas dinâmicas e cheias de energia. Escolha seu estilo favorito e venha dançar com a gente!</span>
+        <span>Aprenda e se divirta com nossos professores em aulas dinâmicas e cheias de energia.<br>Escolha seu estilo favorito e venha dançar com a gente!</span>
+        </div>  
         <ul class="blocklist">
-            <li> 
+            <li data-aos="fade-left" data-aos-duration="1000"> <div class="thecard">
                 <img src="img/community.png" alt="Community Icon" class="icon">
                 <h3 class="flashtitle">Comunidade Vibrante</h3>
-                <p class="flashinfo">Conecte-se com outros apaixonados por dança, faça amizades e evolua com a energia do grupo.</p>
+                <p class="flashinfo">Conecte-se com outros apaixonados pela dança, crie laços e evolua com a contagiante energia do grupo.</p></div>
             </li>
-            <li>
+            <li data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100"> <div class="thecard">
                 <img src="img/dance.png" alt="Fun Icon" class="icon">
                 <h3 class="flashtitle">Variedade de Estilos</h3>
-                <p class="flashinfo">Aulas presenciais acompanhadas nos seguintes estilos: Waacking, Vogue, Dance Hall, Hip Hop, Jazz Funk e K-POP.</p>
+                <p class="flashinfo">Aulas presenciais, acompanhadas e dinâmicas nos estilos: Waacking, Vogue, Dance Hall, Hip Hop, Jazz Funk e K-POP.</p></div>
             </li>
-            <li>
+            <li data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200"> <div class="thecard">
                 <img src="img/ambiente.png" alt="Variety Icon" class="icon">
                 <h3 class="flashtitle">Ambiente Aconchegante</h3>
-                <p class="flashinfo">Espaço preparado para que você tenha conforto e motivação durante as aulas.</p>
+                <p class="flashinfo">Espaço preparado para garantir conforto, motivação e todo o suporte necessário durante as aulas e práticas.</p> </div>
             </li>
         </ul>
     </div>
     <div class="revbg">
         <ul class="reviews"> 
-            <li class="revblock">
+            <li class="revblock" data-aos="fade-right" data-aos-duration="1000">
                 <ul class="rev">
                 <li> 
                     <img src="img/lidia.png" alt="Lidia" class="pfp"> 
@@ -81,7 +81,7 @@
                     <p>Exemplo de excelência e profissionalismo.</p>
                 </li>
             </ul></li>
-            <li class="revblock">
+            <li class="revblock" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
                 <ul class="rev">
                 <li> 
                     <img src="img/bruna.png" alt="Bruna" class="pfp"> 
@@ -93,7 +93,7 @@
                 </li>
             </ul>
             </li>
-            <li class="revblock">
+            <li class="revblock" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
                 <ul class="rev">
                 <li> 
                     <img src="img/tanisha.png" alt="Tanisha" class="pfp"> 
@@ -108,38 +108,38 @@
         </ul>
     </div>
     <div class="moreinfo" id="a">
-      <div class="loc">
+      <div class="loc" data-aos="fade-right" data-aos-duration="1000">
          <h3>Nos encontre</h3>
          <ul class="locmore"><li>
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.6899802543267!2d-46.50650239999999!3d-18.5880105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ae8ac57fa930dd%3A0x8ca5853bdc199f4e!2sR.%20Alc%C3%ADdes%20Pereira%20da%20Silveira%2C%20143%20-%20Jardim%20Centro%2C%20Patos%20de%20Minas%20-%20MG%2C%2038703-014!5e0!3m2!1spt-BR!2sbr!4v1760047667201!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.539977242458!2d-46.514710699999995!3d-18.594767100000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ae8b8e77beff09%3A0xe8671bf6af187a7b!2sGiro%20Dance%20Crew!5e0!3m2!1sen!2sbr!4v1762102546724!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </li>
          <li class="tswift">
-        <span>Rua Alcídes Pereira da Silveira, 143<br>Jardim Centro<br>Patos de Minas - MG<br>38703-014</span>
+        <span>Avenida Brasil, 304<br>Sala 103<br>Boa Vista<br>Patos de Minas <br>MG, 38700-188</span>
       </li>
         </ul>
       </div>
-      <div class="redes" id="b">
+      <div class="redes" id="b" data-aos="fade-left" data-aos-duration="1000">
         <h3 id="toknow">Nos conheça</h3>
         <ul class="smedia">
         <li class="mrc">
         <ul class="links"> 
           <li><img src="img/ig.png" alt="Instagram Icon" class="social"></li>
-           <li><a href="https://www.instagram.com/girodancecrew" target="_blank">@girodancecrew</a></li>
+           <li class ="mlink"><a href="https://www.instagram.com/girodancecrew" target="_blank">@girodancecrew</a></li>
         </ul></li>
         <li class="mrc">
         <ul class="links">
           <li><img src="img/phone.png" alt="Phone Icon" class="social"></li>
-          <li>(xx) xxxxx-xxxx</li>
+          <li class="mlink"><a href=tel:034999682275 target="_blank">(34) 99968-2275</a></li>
         </ul></li>
         <li class="mrc">
         <ul class="links">
           <li><img src="img/letter.png" alt="Mail Icon" class="social"></li>
-          <li>suportegiro@gmail.com</li>
+          <li class ="mlink"><a href=mailto:suportegiro@gmail.com target="_blank">suportegiro@gmail.com </a></li>
           </ul></li>
           <li class="mrc">
         <ul class="links">
           <li><img src="img/yt.png" alt="YouTube Icon" class="social"></li>
-          <li>@girodancecrew</li>
+          <li class ="mlink"><a href="https://www.youtube.com/girodancecrew" target="_blank">@girodancecrew</a></li>
         </ul></li>
         </ul>
         </div>
@@ -170,6 +170,29 @@
       </div>
     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const girocrew = document.querySelector('.girocrew');
+    function handleScrollBlur() {
+      let scrollY = window.scrollY;
+      const maxBlur = 3;
+      const scrollDistance = 1000;
+      let blurAmount = (scrollY / scrollDistance) * maxBlur;
+      if (blurAmount > maxBlur) {
+        blurAmount = maxBlur;
+      }
+      window.requestAnimationFrame(() => {
+        girocrew.style.setProperty('--scroll-blur', `${blurAmount}px`);
+      });
+    }
+    window.addEventListener('scroll', handleScrollBlur);
+  });
+</script>
     </body>
 </body>
 </html>
